Fixed whitespace

--- a/styles.css
+++ b/styles.css
@@ -11894,8 +11894,7 @@ textarea.form-control-lg {
     position:absolute;
     padding-top: 0 !important;
     width: 50%;
-    left: 50%;
-    transform: translateX(-50%);
+    transform: translateX(50%);
 }
 
 @keyframes picIncrease {
